# machino

./: .gitignore  COMPLETE-IMPLEMENTATION-V0.6.1.md  Cargo.toml  LICENSE  README.md  SPEC.md  V0.6-IMPLEMENTATION.md
.cargo/: config.toml
docs/: agent-guide.md  diagnostics.schema.json  grammar.ebnf  native-runtime.md
examples/: closures.mno  complete_generics.mno  complete_smt.mno  complete_wasmgc.mno  concurrency.mno  contracts.mno  enums.mno  fib.mno  generic_sort.mno  generics.mno  hello.mno  higher_order.mno  http_server.mno  json.mno  maze_solver.mno  neural_net.mno  pkg_db_demo.mno  pkg_dom_events.mno  pkg_dom_ui.mno  pkg_http_router.mno  pkg_math_lab.mno  pkg_mongo_local.mno  pkg_science.mno  pkg_text_pipeline.mno  registry.mno  smt_contracts.mno  sort.mno  stdlib_tour.mno  structs.mno  wasmgc.mno  wordcount.mno
runners/: db_host.mjs  dom_host.mjs  run-gc.mjs  run.html  run.mjs  tcp_host.mjs  tcp_worker.mjs
src/: ast.rs  checker.rs  db_runtime.rs  diag.rs  fmt.rs  infer.rs  interp.rs  lexer.rs  main.rs  mono.rs  native.rs  ns.rs  parser.rs  pkg.rs  registry.rs  smt.rs  std.mno  synth.rs  wasm.rs  wasmgc.rs
test/: ex_001_hello.mno  ex_002_int_arith.mno  ex_003_float_arith.mno  ex_004_bools.mno  ex_005_strings.mno  ex_006_arrays.mno  ex_007_if_else.mno  ex_008_while_loop.mno  ex_009_for_range.mno  ex_010_break_continue.mno  ex_011_clamp.mno  ex_012_factorial.mno  ex_013_fib.mno  ex_014_safe_div.mno  ex_015_ensures.mno  ex_016_nested_calls.mno  ex_017_find.mno  ex_018_count_even.mno  ex_019_get_or.mno  ex_020_pow_loop.mno  ex_021_struct_point.mno  ex_022_struct_mutate.mno  ex_023_enum_option.mno  ex_024_enum_result.mno  ex_025_match_literal.mno  ex_026_nested_struct.mno  ex_027_enum_cells.mno  ex_028_rect.mno  ex_029_pair_swap.mno  (+80 more)
(+23 files in other folders)
